syntax = "proto3";


enum ClanCardDefs {
  ClanCard_NotSet = 0;
  ClanOfSacrifice = 1;
  ClanOfLife =      2;
  ClanOfDiversity = 3;
}

enum TotemDefs {
  Totem_NotSet  = 0;
  Totem_Ox      = 1;
  Totem_Spirits = 2;
  Totem_Tiger   = 3;
}

enum MonumentCardDefs {
  MonumentCard_NotSet   = 0;
  
  MonumentOfLife        = 1;
  MonumentOfSacrifice   = 2;
  MonumentOfDiversty    = 3;
  
  MonumentOfJustice     = 4;
  MonumentOfTranquility = 5;
  
  MonumentOfMagic       = 6;
  MonumentOfNature      = 7;
  
  MonumentOfWar         = 8;
  MonumentOfPeace       = 9;
}

enum FamilyCardDefs {
  FamilyCard_NotSet  = 0;

  OxFamilyCards       = 10;
  MwForestHunters     = 11;
  GrasslandShepherds  = 12;
  RuggedShepherds     = 13;
  Farmers             = 14;
  MysticFarmers       = 15;
  SoylentGreenFarmers = 16;

  SpiritsFamilyCards  = 20;
  RoadBuilders        = 21;
  ManaChannelers      = 22;
  Enchanters          = 23;
  Channelers          = 24;
  Wizards             = 25;
  Sacrificers         = 26;

  TigerFamilyCards    = 30;
  ClubWielders        = 31;
  ShieldCrafters      = 32;
  Templars            = 33;
  Defenders           = 34;
  Martyrs             = 35;
  Slavers             = 36;
}
